--- a/08_journal-app/package.json
+++ b/08_journal-app/package.json
@@ -6,25 +6,37 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --watchAll"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.13",
     "@reduxjs/toolkit": "^1.9.3",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.0",
+    "babel-jest": "^29.5.0",
     "firebase": "^9.19.1",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
-    "sweetalert2": "^11.7.3"
+    "sweetalert2": "^11.7.3",
+    "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "cloudinary": "^1.35.0",
+    "dotenv": "^16.0.3",
+    "setimmediate": "^1.0.5",
     "vite": "^4.0.0"
   }
 }
